# komfovent-api-python

./: .gitignore  LICENSE  README.md  hacs.json  publish.sh  pyproject.toml  test.html
custom_components/komfovent/: __init__.py  climate.py  const.py  manifest.json  strings.json
custom_components/komfovent/translations/: en.json
komfovent-api/: __init__.py
komfovent_api/: __init__.py  api.py  classes.py  networking.py  public.py
